adding more to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
 <!DOCTYPE html>
+<html lang="es">
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Testing git</title>
+    </head>
+
+    <body>
+        <h1>Testing git</h1>
+        <p>Git is a control system...</p>
+    </body>
+
+</html>
