linking git profile url

--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
         <h1>Testing git</h1>
         <p>Git is a control system...</p>
     </body>
+    <p>
+        <a href="https://github.com/VannaNotGianna">github profile</a>
+    </p>
 
 </html>
