changing title in master branch

--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
 <!DOCTYPE html>
+<html>
+
+    <head>
+        <meta charset="UTF-8">
+        <title>Testing git</title>
+    </head>
+
+    <body>
+        <h1>Testing git</h1>
+    </body>
+
+</html>
